Actualiza estilos y HTML con nuevos retoques

--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
         </div>
         <nav class="nav">
             <ul class="nav-list">
-                <li><a href="main.html" id="inicio-nav">Inicio</a></li>
+                <li><a href="index.html" id="inicio-nav">Inicio</a></li>
                 <li><a href="servicios.html" id="servicios">Servicios</a></li>
                 <li><a href="nustros-trabajos.html" id="trabajos">Nuestros trabajos</a></li>
                 <li><a href="contactanos.html" id="contacto">Contacto</a></li>
