--- a/servicios.html
+++ b/servicios.html
@@ -82,18 +82,31 @@
 
     <main>
     <div class="servicios">
+
         <div class="servicio">
             <h2>Herrería</h2>
             <p>Contamos con una amplia variedad de trabajos de herrería: portones, barandales, puertas, pérgolas, ventanas, escaleras, rejas de seguridad, estructuras metálicas, y más. Trabajamos con materiales de alta calidad para asegurar la durabilidad y estética en cada proyecto.</p>
         </div>
+
+        <hr style="border: 1px solid #ccc; margin: 20px 0;">
+
+
         <div class="servicio">
             <h2>Tablaroca</h2>
             <p>Ofrecemos servicios de instalación de muros, divisiones, repisas, closets, y más en tablaroca, proporcionando soluciones rápidas, estéticas y funcionales para el diseño de interiores.</p>
         </div>
+
+        <hr style="border: 1px solid #ccc; margin: 20px 0;">
+
+
         <div class="servicio">
             <h2>Carpintería</h2>
             <p>Fabricamos puertas, closets, repisas, muebles a medida, adornos decorativos, y todo tipo de proyectos de carpintería. Utilizamos maderas de calidad para lograr acabados perfectos y personalizados según las necesidades de nuestros clientes.</p>
         </div>
+
+        <hr style="border: 1px solid #ccc; margin: 20px 0;">
+
+
         <div class="servicio">
             <h2>Otros Servicios</h2>
             <p>Nuestros servicios incluyen mantenimiento de aire lavado, impermeabilización, pintura, obra civil, plomería, y más. Nos encargamos de todas las necesidades de tu hogar o negocio para garantizar un entorno seguro y cómodo.</p>
