--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
             <ul class="nav-list">
                 <li><a href="index.html" id="inicio-nav">Inicio</a></li>
                 <li><a href="servicios.html" id="servicios">Servicios</a></li>
-                <li><a href="nustros-trabajos.html" id="trabajos">Nuestros trabajos</a></li>
+                <li><a href="nustros-trabajos.html" id="trabajos">Fotografias</a></li>
                 <li><a href="contactanos.html" id="contacto">Contacto</a></li>
                 
             </ul>
