--- a/contactanos.html
+++ b/contactanos.html
@@ -47,7 +47,7 @@
 
 
 
-        <<section id="horario">
+        <section id="horario">
             <h3>Horario de Atención</h3>
             <p>Lunes a Viernes: 9:00 AM - 6:00 PM</p>
             <p>Sábado: 9:00 AM - 2:00 PM</p>
@@ -233,7 +233,7 @@
     <style>
         #horario p {
             font-family: 'Roboto', sans-serif;
-            font-size: 3vw;
+            
             /* Ajusta el tamaño del texto según sea necesario */
             color: #333333;
             /* Cambia el color del texto */
