nueva actualizacion agregamos etiqueta meta theme

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="herrería, carpintería, residencial, muebles, diseño">
     <meta name="author" content="Nombre del Autor">
     <title>Herrería y Carpintería - Nombre de la Empresa</title>
+    <meta name="theme-color" content="#333">
     
     <!-- Enlace al archivo CSS -->
     <link rel="stylesheet" href="styles/style.css">
