--- a/contactanos.html
+++ b/contactanos.html
@@ -115,17 +115,17 @@
 
             <h2>Contáctanos</h2>
 
-            <a href="https://wa.me/8713548934" class="whatsapp-button">
+            <a href="https://wa.me/528713548934" class="whatsapp-button">
                 <img src="src/logowats.png" alt="WhatsApp Logo" class="whatsapp-logo">
                 Contáctanos por WhatsApp
             </a>
 
-            <a href="mailto:reyabel999@gmail.com" class="correo-button" style="margin-top: 10px;">
+            <a href="mailto:tova.servicios@hotmail.com" class="correo-button" style="margin-top: 10px;">
                 <img src="src/logo correo electronico.png" alt="WhatsApp Logo" class="whatsapp-logo">
                 Envianos un Correo electronico
             </a>
             <p style="display: flex; align-items: center; margin: 2%; font-size: 1.02rem;">
-                reyabel999@gmail.com
+                tova.servicios@hotmail.com
                 <button class="copiar-button" onclick="copiarAlPortapapeles()" style="margin-left: 10px;">Copiar
                     portapapeles</button>
             </p>
@@ -135,7 +135,7 @@
             <script>
 
                 function copiarAlPortapapeles() {
-                    const correo = "reyabel999@gmail.com";
+                    const correo = "tova.servicios@hotmail.com";
                     navigator.clipboard.writeText(correo).then(() => {
                         mostrarMensajeCopiado();
                     }).catch(err => {
