añadimos una etiqueta para indexar la pagina a google

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <title>Herrería y Carpintería - Nombre de la Empresa</title>
     <meta name="theme-color" content="#333">
 
+    <!-- Indexacion de el motor de busqueda de goole, Google accede al sitio y verifica que se encuentre esta etiqueta
+     disponible con esto goole confirma que el sitio me pertence -->
+    <meta name="google-site-verification" content="WaPZZ3ztGhMLtm-dOUrmo85tk_JBPBt8LzyAIqlXQG4" />
+
     <!-- Enlace al archivo CSS -->
     <link rel="stylesheet" href="styles/style.css">
 
