--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         content="Descubre nuestra herrería y carpintería residencial en la Comarca Lagunera. Ofrecemos diseño y fabricación de muebles a medida, instalación de estructuras metálicas y más. ¡Contáctanos para un presupuesto personalizado!">
     <meta name="keywords" content="herrería, carpintería, residencial, muebles, diseño">
     <meta name="author" content="Nombre del Autor">
-    <title>Herrería y Carpintería - Nombre de la Empresa</title>
+    <title>Tovaservicios Laguna - Expertos en Herrería, Carpintería y Servicios de Mantenimiento</title>
     <meta name="theme-color" content="#333">
 
     <!-- Indexacion de el motor de busqueda de goole, Google accede al sitio y verifica que se encuentre esta etiqueta
