agregamos el script de palabras clave para mejorar el seo, asi como un favicon para mejor visualizacion en las paginas web

--- a/index.html
+++ b/index.html
@@ -14,6 +14,28 @@
     <!-- Indexacion de el motor de busqueda de goole, Google accede al sitio y verifica que se encuentre esta etiqueta
      disponible con esto goole confirma que el sitio me pertence -->
     <meta name="google-site-verification" content="WaPZZ3ztGhMLtm-dOUrmo85tk_JBPBt8LzyAIqlXQG4" />
+      <!-- Favicon -->
+      <link rel="icon" href="src/favico.webp" type="image/x-icon">
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "LocalBusiness",
+          "name": "Multiservicios Laguna",
+          "description": "Herrería y carpintería en la Comarca Lagunera. Diseñamos y fabricamos puertas, portones, rejas y más.",
+          "image": "https://tovaservicioslaguna.com/src/portada.jpg",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Emiliano Zapata 36, Ejido la Merced, 27296 Torreón, Coah.",
+            "addressLocality": "Comarca Lagunera",
+            "addressRegion": "Coahuila",
+            "postalCode": "27296",
+            "addressCountry": "MX"
+          },
+          "telephone": "+52-871-363-7366",
+          "priceRange": "$$"
+        }
+        </script>
 
     <!-- Enlace al archivo CSS -->
     <link rel="stylesheet" href="styles/style.css">
@@ -67,7 +89,9 @@
                 1px -1px 0px black,   /* Sombra superior derecha */
                 -1px 1px 0px black,   /* Sombra inferior izquierda */
                 1px 1px 0px black;    /* Sombra inferior derecha */
-              color: whitesmoke;">Multiservicios Laguna</h1>
+              color: whitesmoke;">Multiservicios Laguna: Herrería y Carpintería en la Comarca Lagunera</h1>
+             
+
             <p style="background-color: rgba(0, 0, 0, 0.5); color: white; padding: 10px;">
                 Nos especializamos en la creación de muebles y estructuras personalizadas para tu hogar.
             </p>
