--- a/contactanos.html
+++ b/contactanos.html
@@ -4,9 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página web de herrería y carpintería residencial">
-    <meta name="keywords" content="herrería, carpintería, residencial, muebles, diseño">
+    <meta name="description" content="Bienvenido a Multiservicios Laguna, su solución en herrería y carpintería en la Comarca Lagunera. Ofrecemos diseño y fabricación de muebles a medida, puertas, portones, rejas y más. ¡Contáctenos para un presupuesto personalizado!">
+
+    <meta name="keywords" content="herrería, carpintería, contactanos, nuestras redes sociales, diseño">
     <meta name="author" content="Nombre del Autor">
+
+    <script type="application/ld+json">
+
+        
+        {
+          "@context": "https://schema.org",
+          "@type": "LocalBusiness",
+          "name": "Multiservicios Laguna",
+          "description": "Herrería y carpintería en la Comarca Lagunera. Diseñamos y fabricamos puertas, portones, rejas y más.",
+          "image": "https://tovaservicioslaguna.com/src/portada.jpg",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Emiliano Zapata 36, Ejido la Merced, 27296 Torreón, Coah.",
+            "addressLocality": "Comarca Lagunera",
+            "addressRegion": "Coahuila",
+            "postalCode": "27296",
+            "addressCountry": "MX"
+          },
+          "telephone": "+52-871-363-7366",
+          "priceRange": "$$"
+        }
+        </script>
+
+
     <title>Contacta con Nosotros - Herreria y carpint</title>
     <script src="scripts/main.js" defer></script>
     <!-- Enlace al archivo CSS -->
