integracion google analitycs en todas las pagians

--- a/nustros-trabajos.html
+++ b/nustros-trabajos.html
@@ -16,6 +16,17 @@
     <link rel="stylesheet" href="styles/style.css">
     <!-- Incluir jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9WLJQEC2NC"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-9WLJQEC2NC');
+    </script>
+
 </head>
 
 <body>
