agregamos el .ico a todas las subpaginas y lo hicimos mas eficiente en recursos

--- a/contactanos.html
+++ b/contactanos.html
@@ -9,6 +9,7 @@
 
     <meta name="keywords" content="herrería, carpintería, contactanos, nuestras redes sociales, diseño">
     <meta name="author" content="Nombre del Autor">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <script type="application/ld+json">
 
