--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      disponible con esto goole confirma que el sitio me pertence -->
     <meta name="google-site-verification" content="WaPZZ3ztGhMLtm-dOUrmo85tk_JBPBt8LzyAIqlXQG4" />
     <!-- Favicon -->
-    <link rel="icon" href="src/favico.webp" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <script type="application/ld+json">
         {
