--- a/nustros-trabajos.html
+++ b/nustros-trabajos.html
@@ -11,6 +11,8 @@
     <title>Herrería y Carpintería - Nombre de la Empresa</title>
     <script src="scripts/main.js" defer></script>
     <script src="nustros-trabajos.js" defer></script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
 
     <!-- Enlace al archivo CSS -->
     <link rel="stylesheet" href="styles/style.css">
