--- a/servicios.html
+++ b/servicios.html
@@ -17,6 +17,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <title>Nuestros Servicios</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <style>
         .servicios {
             max-width: 800px;
